# HttpAgent

./: .gitignore  CHANGELOG.md  NOTES.md  README.md  pyproject.toml
api_servers/: discord_server.py  server.py
api_servers/console_chat_service/: console_chat.py
api_servers/context_service/: context_manager.py
api_servers/memory_service/: memory_manager.py
api_servers/schedule_service/: schedule.py  schedule_manager.py
api_servers/scripts/: api_servers_to_openapi.py
docs/: activity_diagram.drawio  diagram.drawio  functionality.md  integrations.md
docs/fine-tuning/: fine-tuning_webhooks.md
examples/openapi_http/: openapi_http_example.py
examples/openapi_text/: openapi_text_example.py
examples/weatherReasoner/: get_weather_example.py
examples/weather_text_agent/: functions.py  weather_text_agent.py
fine-tuning/: fine-tuning.ipynb  instructions.txt  send_api_request.json
fine-tuning/datasets/: http-agent-2024-09-12.jsonl
resources/api_clients/: api_clients.json
resources/apis/: cognitive_processing_openapi.json  discord_openapi.json  essentials_openapi.json  spotify_openapi.json  wolfram_openapi.json
resources/functions/: add_schedule.json  get_operation.json  list_operations.json  request_action.json  retrieve_api_info.json  save_memory.json  (+1 more)
scripts/: set_auth_token_manually.py  set_auth_tokens.py  update_api_store.py
src/: api_manager.py  assistant.py  auth_manager.py  context_manager.py  core.py  main.py  reasoner.py  request_processor.py  schedule.py  schedule_manager.py
test/: functionReasoner.py  openapi_manager.py
(+37 files in other folders)
